src/app.css
@import "tailwindcss";
@import "tw-animate-css";

@theme {
	/* Setup font */
	--font-display: "Inter", sans-serif;

	/* Colors */
	--color-gecko-black: #121218;
	--color-gecko-shade: #1f1f24;
	--color-gecko-muted: #2b2b30;
	--color-gecko-black-hover: #1f1f24;
	--color-gecko-white: #f3f3f3;
	--color-gecko-gray: #b4b4b6;
	--color-gecko-green: #1bd289;
	--color-gecko-red: #ff384f;
}

